--- a/Colab/StyleTTS2_Finetune_Demo.ipynb
+++ b/Colab/StyleTTS2_Finetune_Demo.ipynb
@@ -464,9 +464,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k_el2nv5ons8",
-        "outputId": "2a253f61-3130-4ad0-8d28-21094650dc44"
+        "outputId": "5fabc44c-893d-443e-a39f-7b751c39a086"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,9 +613,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "29671266-a0b5-46b8-b64e-5337d367b184"
+        "outputId": "1c5a9ac6-dcbd-4263-8ceb-74802e8fdf3d"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,22 +730,147 @@
       "metadata": {
         "id": "7uEITi0hU4I2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 216
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3f6af0e5-5dd7-4064-e705-1d3e9a5327b0"
+        "outputId": "282b87d5-44a9-4394-e879-7d73c3d5505e"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: 'Configs/config_ft.yml'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-d8682a62cd5e>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mconfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msafe_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cat Configs/config_ft.yml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'head Data/train_list.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Configs/config_ft.yml'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "log_dir: \"Models/LJSpeech\"\n",
+            "save_freq: 5\n",
+            "log_interval: 10\n",
+            "device: \"cuda\"\n",
+            "epochs: 50 # number of finetuning epoch (1 hour of data)\n",
+            "batch_size: 8\n",
+            "max_len: 400 # maximum number of frames\n",
+            "pretrained_model: \"Models/LibriTTS/epochs_2nd_00020.pth\"\n",
+            "second_stage_load_pretrained: true # set to true if the pre-trained model is for 2nd stage\n",
+            "load_only_params: true # set to true if do not want to load epoch numbers and optimizer parameters\n",
+            "\n",
+            "F0_path: \"Utils/JDC/bst.t7\"\n",
+            "ASR_config: \"Utils/ASR/config.yml\"\n",
+            "ASR_path: \"Utils/ASR/epoch_00080.pth\"\n",
+            "PLBERT_dir: 'Utils/PLBERT/'\n",
+            "\n",
+            "data_params:\n",
+            "  train_data: \"Data/train_list.txt\"\n",
+            "  val_data: \"Data/val_list.txt\"\n",
+            "  root_path: \"/local/LJSpeech-1.1/wavs\"\n",
+            "  OOD_data: \"Data/OOD_texts.txt\"\n",
+            "  min_length: 50 # sample until texts with this size are obtained for OOD texts\n",
+            "\n",
+            "preprocess_params:\n",
+            "  sr: 24000\n",
+            "  spect_params:\n",
+            "    n_fft: 2048\n",
+            "    win_length: 1200\n",
+            "    hop_length: 300\n",
+            "\n",
+            "model_params:\n",
+            "  multispeaker: true\n",
+            "\n",
+            "  dim_in: 64 \n",
+            "  hidden_dim: 512\n",
+            "  max_conv_dim: 512\n",
+            "  n_layer: 3\n",
+            "  n_mels: 80\n",
+            "\n",
+            "  n_token: 178 # number of phoneme tokens\n",
+            "  max_dur: 50 # maximum duration of a single phoneme\n",
+            "  style_dim: 128 # style vector size\n",
+            "  \n",
+            "  dropout: 0.2\n",
+            "\n",
+            "  # config for decoder\n",
+            "  decoder: \n",
+            "      type: 'hifigan' # either hifigan or istftnet\n",
+            "      resblock_kernel_sizes: [3,7,11]\n",
+            "      upsample_rates :  [10,5,3,2]\n",
+            "      upsample_initial_channel: 512\n",
+            "      resblock_dilation_sizes: [[1,3,5], [1,3,5], [1,3,5]]\n",
+            "      upsample_kernel_sizes: [20,10,6,4]\n",
+            "      \n",
+            "  # speech language model config\n",
+            "  slm:\n",
+            "      model: 'microsoft/wavlm-base-plus'\n",
+            "      sr: 16000 # sampling rate of SLM\n",
+            "      hidden: 768 # hidden size of SLM\n",
+            "      nlayers: 13 # number of layers of SLM\n",
+            "      initial_channel: 64 # initial channels of SLM discriminator head\n",
+            "  \n",
+            "  # style diffusion model config\n",
+            "  diffusion:\n",
+            "    embedding_mask_proba: 0.1\n",
+            "    # transformer config\n",
+            "    transformer:\n",
+            "      num_layers: 3\n",
+            "      num_heads: 8\n",
+            "      head_features: 64\n",
+            "      multiplier: 2\n",
+            "\n",
+            "    # diffusion distribution config\n",
+            "    dist:\n",
+            "      sigma_data: 0.2 # placeholder for estimate_sigma_data set to false\n",
+            "      estimate_sigma_data: true # estimate sigma_data from the current batch if set to true\n",
+            "      mean: -3.0\n",
+            "      std: 1.0\n",
+            "  \n",
+            "loss_params:\n",
+            "    lambda_mel: 5. # mel reconstruction loss\n",
+            "    lambda_gen: 1. # generator loss\n",
+            "    lambda_slm: 1. # slm feature matching loss\n",
+            "    \n",
+            "    lambda_mono: 1. # monotonic alignment loss (TMA)\n",
+            "    lambda_s2s: 1. # sequence-to-sequence loss (TMA)\n",
+            "\n",
+            "    lambda_F0: 1. # F0 reconstruction loss\n",
+            "    lambda_norm: 1. # norm reconstruction loss\n",
+            "    lambda_dur: 1. # duration loss\n",
+            "    lambda_ce: 20. # duration predictor probability output CE loss\n",
+            "    lambda_sty: 1. # style reconstruction loss\n",
+            "    lambda_diff: 1. # score matching loss\n",
+            "    \n",
+            "    diff_epoch: 10 # style diffusion starting epoch\n",
+            "    joint_epoch: 30 # joint training starting epoch\n",
+            "\n",
+            "optimizer_params:\n",
+            "  lr: 0.0001 # general learning rate\n",
+            "  bert_lr: 0.00001 # learning rate for PLBERT\n",
+            "  ft_lr: 0.0001 # learning rate for acoustic modules\n",
+            "  \n",
+            "slmadv_params:\n",
+            "  min_len: 400 # minimum length of samples\n",
+            "  max_len: 500 # maximum length of samples\n",
+            "  batch_percentage: 0.5 # to prevent out of memory, only use half of the original batch size\n",
+            "  iter: 10 # update the discriminator every this iterations of generator update\n",
+            "  thresh: 5 # gradient norm above which the gradient is scaled\n",
+            "  scale: 0.01 # gradient scaling factor for predictors from SLM discriminators\n",
+            "  sig: 1.5 # sigma for differentiable duration modeling\n",
+            "  \n",
+            "LJ001-0001.wav|pɹˈɪntɪŋ, ɪnðɪ ˈoʊnli sˈɛns wɪð wˌɪtʃ wiː ɑːɹ æt pɹˈɛzənt kənsˈɜːnd, dˈɪfɚz fɹʌm mˈoʊst ɪf nˌɑːt fɹʌm ˈɔːl ðɪ ˈɑːɹts ænd kɹˈæfts ɹˌɛpɹᵻzˈɛntᵻd ɪnðɪ ɛksɪbˈɪʃən pɹˈɪntɪŋ, ɪnðɪ ˈoʊnli sˈɛns wɪð wˌɪtʃ wiː ɑːɹ æt pɹˈɛzənt kənsˈɜːnd, dˈɪfɚz fɹʌm mˈoʊst ɪf nˌɑːt fɹʌm ˈɔːl ðɪ ˈɑːɹts ænd kɹˈæfts ɹˌɛpɹᵻzˈɛntᵻd ɪnðɪ ɛksɪbˈɪʃən |0\n",
+            "LJ001-0002.wav|ɪn bˌiːɪŋ kəmpˈæɹətˌɪvli mˈɑːdɚn.ɪn bˌiːɪŋ kəmpˈæɹətˌɪvli mˈɑːdɚn. |0\n",
+            "LJ001-0003.wav|fɔːɹ ɔːlðˈoʊ ðə tʃaɪnˈiːz tˈʊk ɪmpɹˈɛʃənz fɹʌm wˈʊd blˈɑːks ɛŋɡɹˈeɪvd ɪn ɹᵻlˈiːf fɔːɹ sˈɛntʃɚɹiz bᵻfˌoːɹ ðə wˈʊdkʌɾɚz ʌvðə nˈɛðɜːləndz, baɪ ɐ sˈɪmɪlɚ pɹˈɑːsɛs fɔːɹ ɔːlðˈoʊ ðə tʃaɪnˈiːz tˈʊk ɪmpɹˈɛʃənz fɹʌm wˈʊd blˈɑːks ɛŋɡɹˈeɪvd ɪn ɹᵻlˈiːf fɔːɹ sˈɛntʃɚɹiz bᵻfˌoːɹ ðə wˈʊdkʌɾɚz ʌvðə nˈɛðɜːləndz, baɪ ɐ sˈɪmɪlɚ pɹˈɑːsɛs |0\n",
+            "LJ001-0004.wav|pɹədˈuːst ðə blˈɑːk bˈʊks, wˌɪtʃ wɜː ðɪ ɪmˈiːdɪət pɹˈɛdᵻsˌɛsɚz ʌvðə tɹˈuː pɹˈɪntᵻd bˈʊk,pɹədˈuːst ðə blˈɑːk bˈʊks, wˌɪtʃ wɜː ðɪ ɪmˈiːdɪət pɹˈɛdᵻsˌɛsɚz ʌvðə tɹˈuː pɹˈɪntᵻd bˈʊk, |0\n",
+            "LJ001-0005.wav|ðɪ ɪnvˈɛnʃən ʌv mˈuːvəbəl mˈɛɾəl lˈɛɾɚz ɪnðə mˈɪdəl ʌvðə fˈɪftiːnθ sˈɛntʃɚɹi mˈeɪ dʒˈʌstli biː kənsˈɪdɚd æz ðɪ ɪnvˈɛnʃən ʌvðɪ ˈɑːɹt ʌv pɹˈɪntɪŋ.ðɪ ɪnvˈɛnʃən ʌv mˈuːvəbəl mˈɛɾəl lˈɛɾɚz ɪnðə mˈɪdəl ʌvðə fˈɪftiːnθ sˈɛntʃɚɹi mˈeɪ dʒˈʌstli biː kənsˈɪdɚd æz ðɪ ɪnvˈɛnʃən ʌvðɪ ˈɑːɹt ʌv pɹˈɪntɪŋ. |0\n",
+            "LJ001-0006.wav|ænd ɪɾ ɪz wˈɜːθ mˈɛnʃən ɪn pˈæsɪŋ ðˈæt, æz ɐn ɛɡzˈæmpəl ʌv fˈaɪn taɪpˈɑːɡɹəfi,ænd ɪɾ ɪz wˈɜːθ mˈɛnʃən ɪn pˈæsɪŋ ðˈæt, æz ɐn ɛɡzˈæmpəl ʌv fˈaɪn taɪpˈɑːɡɹəfi, |0\n",
+            "LJ001-0007.wav|ðɪ ˈɜːlɪɪst bˈʊk pɹˈɪntᵻd wɪð mˈuːvəbəl tˈaɪps, ðə ɡjˈuːtənbˌɜːɡ, ɔːɹ \"fˈɔːɹɾitˈuː lˈaɪn bˈaɪbəl\" ʌv ɐbˌaʊt wˈʌn θˈaʊzənd fˈoːɹhˈʌndɹɪd fˈɪfti fˈaɪv,ðɪ ˈɜːlɪɪst bˈʊk pɹˈɪntᵻd wɪð mˈuːvəbəl tˈaɪps, ðə ɡjˈuːtənbˌɜːɡ, ɔːɹ \"fˈɔːɹɾitˈuː lˈaɪn bˈaɪbəl\" ʌv ɐbˌaʊt fˈoːɹtiːn fˈɪftifˈaɪv, |0\n",
+            "LJ001-0008.wav|hɐz nˈɛvɚ bˌɪn sɚpˈæst.hɐz nˈɛvɚ bˌɪn sɚpˈæst. |0\n",
+            "LJ001-0009.wav|pɹˈɪntɪŋ, ðˈɛn, fɔːɹ ˌaʊɚ pˈɜːpəs, mˈeɪ biː kənsˈɪdɚd æz ðɪ ˈɑːɹt ʌv mˌeɪkɪŋ bˈʊks baɪ mˈiːnz ʌv mˈuːvəbəl tˈaɪps.pɹˈɪntɪŋ, ðˈɛn, fɔːɹ ˌaʊɚ pˈɜːpəs, mˈeɪ biː kənsˈɪdɚd æz ðɪ ˈɑːɹt ʌv mˌeɪkɪŋ bˈʊks baɪ mˈiːnz ʌv mˈuːvəbəl tˈaɪps. |0\n",
+            "LJ001-0010.wav|nˈaʊ, æz ˈɔːl bˈʊks nˌɑːt pɹaɪmˈɛɹᵻli ɪntˈɛndᵻd æz pˈɪktʃɚbˈʊks kənsˈɪst pɹˈɪnsɪpəli ʌv tˈaɪps kəmpˈoʊzd tə fˈɔːɹm lˈɛɾɚpɹˌɛs,nˈaʊ, æz ˈɔːl bˈʊks nˌɑːt pɹaɪmˈɛɹᵻli ɪntˈɛndᵻd æz pˈɪktʃɚbˈʊks kənsˈɪst pɹˈɪnsɪpəli ʌv tˈaɪps kəmpˈoʊzd tə fˈɔːɹm lˈɛɾɚpɹˌɛs, |0\n",
+            "LJ001-0001|Printing, in the only sense with which we are at present concerned, differs from most if not from all the arts and crafts represented in the Exhibition|Printing, in the only sense with which we are at present concerned, differs from most if not from all the arts and crafts represented in the Exhibition\n",
+            "LJ001-0002|in being comparatively modern.|in being comparatively modern.\n",
+            "LJ001-0003|For although the Chinese took impressions from wood blocks engraved in relief for centuries before the woodcutters of the Netherlands, by a similar process|For although the Chinese took impressions from wood blocks engraved in relief for centuries before the woodcutters of the Netherlands, by a similar process\n",
+            "LJ001-0004|produced the block books, which were the immediate predecessors of the true printed book,|produced the block books, which were the immediate predecessors of the true printed book,\n",
+            "LJ001-0005|the invention of movable metal letters in the middle of the fifteenth century may justly be considered as the invention of the art of printing.|the invention of movable metal letters in the middle of the fifteenth century may justly be considered as the invention of the art of printing.\n",
+            "LJ001-0006|And it is worth mention in passing that, as an example of fine typography,|And it is worth mention in passing that, as an example of fine typography,\n",
+            "LJ001-0007|the earliest book printed with movable types, the Gutenberg, or \"forty-two line Bible\" of about 1455,|the earliest book printed with movable types, the Gutenberg, or \"forty-two line Bible\" of about fourteen fifty-five,\n",
+            "LJ001-0008|has never been surpassed.|has never been surpassed.\n",
+            "LJ001-0009|Printing, then, for our purpose, may be considered as the art of making books by means of movable types.|Printing, then, for our purpose, may be considered as the art of making books by means of movable types.\n",
+            "LJ001-0010|Now, as all books not primarily intended as picture-books consist principally of types composed to form letterpress,|Now, as all books not primarily intended as picture-books consist principally of types composed to form letterpress,\n"
           ]
         }
       ]
@@ -768,7 +893,7 @@
       "metadata": {
         "id": "TPTRgOKSVT4K"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -788,19 +913,56 @@
       ],
       "metadata": {
         "id": "HZVAD5GKWm-O",
-        "outputId": "d07f8063-899f-4b69-df9a-f8e6605e8103",
+        "outputId": "b6dd80e0-bdcf-41d2-e6c1-df6617704cf2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content\n",
-            "python3: can't open file '/content/train_finetune.py': [Errno 2] No such file or directory\n"
+            "/content/StyleTTS2\n",
+            "2025-03-24 13:17:10.206535: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+            "E0000 00:00:1742822230.437746    4086 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1742822230.496812    4086 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2025-03-24 13:17:11.003677: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/StyleTTS2/train_finetune.py\", line 707, in <module>\n",
+            "    main()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 1161, in __call__\n",
+            "    return self.main(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 1082, in main\n",
+            "    rv = self.invoke(ctx)\n",
+            "         ^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 1443, in invoke\n",
+            "    return ctx.invoke(self.callback, **ctx.params)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 788, in invoke\n",
+            "    return __callback(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/StyleTTS2/train_finetune.py\", line 115, in main\n",
+            "    text_aligner = load_ASR_models(ASR_path, ASR_config)\n",
+            "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/StyleTTS2/models.py\", line 609, in load_ASR_models\n",
+            "    asr_model = _load_model(asr_model_config, ASR_MODEL_PATH)\n",
+            "                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/StyleTTS2/models.py\", line 604, in _load_model\n",
+            "    params = torch.load(model_path, map_location='cpu')['model']\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/torch/serialization.py\", line 1470, in load\n",
+            "    raise pickle.UnpicklingError(_get_wo_message(str(e))) from None\n",
+            "_pickle.UnpicklingError: Weights only load failed. This file can still be loaded, to do so you have two options, \u001b[1mdo those steps only if you trust the source of the checkpoint\u001b[0m. \n",
+            "\t(1) In PyTorch 2.6, we changed the default value of the `weights_only` argument in `torch.load` from `False` to `True`. Re-running `torch.load` with `weights_only` set to `False` will likely succeed, but it can result in arbitrary code execution. Do it only if you got the file from a trusted source.\n",
+            "\t(2) Alternatively, to load with `weights_only=True` please check the recommended steps in the following error message.\n",
+            "\tWeightsUnpickler error: Unsupported global: GLOBAL builtins.getattr was not an allowed global by default. Please use `torch.serialization.add_safe_globals([getattr])` or the `torch.serialization.safe_globals([getattr])` context manager to allowlist this global if you trust this class/function.\n",
+            "\n",
+            "Check the documentation of torch.load to learn more about types accepted by default with weights_only https://pytorch.org/docs/stable/generated/torch.load.html.\n"
           ]
         }
       ]
@@ -857,11 +1019,11 @@
         "!pip install munch"
       ],
       "metadata": {
-        "id": "caoWzw64x3Um",
-        "outputId": "8703a86c-1ddb-45b1-ecf8-3f024b16f02a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "caoWzw64x3Um",
+        "outputId": "8703a86c-1ddb-45b1-ecf8-3f024b16f02a"
       },
       "execution_count": 3,
       "outputs": [
